welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: value lenght is not a member of Array[Int]
  var n =nums.lenght
              ^indexOfValue:3: error: not found: value o
  for ( j <- o to n){
             ^